testsuite/bsc.interra/messages/EWeakContext/EWeakContext2.bs
package EWeakContext2() where

foo :: a
foo = 0

